<resources>
    <string name="app_name">Plugi</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading">Loading</string>
    <string name="reg_code_is">reg</string>
    <string name="share_using">share using</string>
    <string name="there_error">there error</string>
    <string name="select_iamge">select image</string>
    <string name="done">Done</string>
    <string name="required">required</string>
    <string name="error_mail">Email is not valid</string>
    <string name="error_web">website not valid</string>
    <string name="error_phone">Please Enter Valid Phone Number</string>
    <string name="error_short">Password should have atleast 8 characters.</string>
    <string name="error_dismach">password dismatch</string>
    <string name="english">ENGLISH</string>
    <string name="arabic">عربي</string>
    <string name="nav_home">HOME</string>
    <string name="nav_search">SEARCH</string>
    <string name="nav_account">MY PLUGI</string>
    <string name="some_thing_wrong_info">there is error</string>
    <string name="some_thing_wrong">some thing went wrong</string>
    <string name="there_no_data_info">no data now</string>
    <string name="there_no_data">Empty</string>
    <string name="offlineMain">offline</string>
    <string name="offline_info">check connection</string>
    <string name="how_its_work">How it Works</string>
    <string name="tap_anywhere_to_dismiss">Tap anywhere to dismiss</string>
    <string name="swipe_to_see">Swipe Next to See More</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="log_in_with_twitter">Log In with Twitter</string>
    <string name="log_in_with_face">Log In with Facebook</string>
    <string name="log_in_with_google">Log In with Google</string>
    <string name="email_address">Email Address</string>
    <string name="Password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_conditions"><![CDATA[I agree to the ]]></string>
    <string name="facebook_app_id" translatable="false">2818974111446935</string>
    <string name="agree_to_the_terms_conditions">Agree to terms</string>
    <string name="unAuthorize">Relogin</string>
    <string name="reset_password">Reset Password</string>
    <string name="forget_pas_info">Please enter the email address that is associated with your Plugi account</string>
    <string name="new_password">New Password</string>
    <string name="opt">Enter OTP</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="menu">Menu</string>
    <string name="contact_us">Contact Us</string>
    <string name="language_switcher">Language Switcher</string>
    <string name="about_plugi">About Plugi</string>
    <string name="terms_conditions"><![CDATA[Terms Of Use]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="heading_for_paragraph">Heading For Paragraph</string>
    <string name="lorem_txt">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_phone">Telephone</string>
    <string name="lorem_s_txt">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas</string>
    <string name="enter_message">Message</string>
    <string name="en">EN</string>
    <string name="ar">AR</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>
    <string name="password_should_longer_than_six">"Password Should be longer than 6 "</string>
    <string name="invild_password">Invaild Password</string>
    <string name="email_not_exist">Email Not Exist</string>
    <string name="email_already_exist">Email Already Exist</string>
    <string name="plase_agree_terms_conditions_first"><![CDATA[Please agree Terms & Conditions]]></string>
    <string name="password_doesnt_match">Password  does not match</string>
    <string name="message">Message <font color='#FF0000'>*</font></string>
    <string name="email_id">Email ID <font color='#FF0000'>*</font></string>
    <string name="full_name">Full Name <font color='#FF0000'>*</font></string>
    <string name="telephone">Telephone <font color='#FF0000'>*</font></string>
    <string name="view_all">View All</string>
    <string name="mostpopularproducts">Most Popular Products</string>
    <string name="newlowestasks">New Lowest Asks</string>
    <string name="lowest_ask">Lowest Ask</string>
    <string name="currency_kd">KD.</string>
    <string name="sold">Sold</string>
    <string name="just_now">Just Now</string>
    <string name="min_ago">a min ago</string>
    <string name="minites_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="hour_ago">an hour ago</string>
    <string name="yesterday">yesterday</string>
    <string name="today">Today</string>
    <string name="choose_size">Choose Size</string>
    <string name="select_mens_size">Select Men`s Size</string>
    <string name="view_sizes_chart">View Size Chart</string>
    <string name="email">Email</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="oh_no">Noting to see here!</string>
    <string name="try_another_search">Try another search</string>
    <string name="suggest_a_product">Suggest a poduct.</string>
    <string name="or">Or</string>
</resources>