<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.resetPassword.ResetPasswordActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_marginTop="16dp"
            android:layout_gravity="start"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_landiing_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:visibility="visible"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </FrameLayout>

    <EditText
        android:layout_marginTop="32dp"
        android:inputType="textEmailAddress"
        android:id="@+id/etOtp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/edittext"
        android:hint="@string/opt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:id="@+id/etPassword"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/edittext"
        android:hint="@string/enter_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:id="@+id/etRePassword"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/edittext"
        android:hint="@string/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/btn"
        android:id="@+id/btnResetPassword"
        android:text="@string/SUBMIT"
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/btn"
        android:id="@+id/btnResendPassword"
        android:text="@string/resend_code"
        android:backgroundTint="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>