<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Views for No Internet connection-->
    <LinearLayout
        android:visibility="gone"
        android:padding="32dp"
        android:id="@+id/viewNoItems"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:textAlignment="center"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/oh_no"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:typeface="monospace"/>

        <TextView
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/try_another_search"
            android:textColor="@color/black"
            android:textSize="14sp"/>
        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <TextView
                android:layout_marginStart="16dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/suggest_a_product"
                android:textColor="@color/blue"
                android:textSize="14sp"/>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>