<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.forgetPassword.ForgetPasswordActivity"
    android:orientation="vertical">


    <include
        android:id="@+id/toolbarHome"
        layout="@layout/toolbar_subhome" />
    <LinearLayout
        android:layout_below="@id/toolbarHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_margin="16dp"
        android:text="@string/forget_pas_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <EditText

        android:inputType="textEmailAddress"
        android:id="@+id/etEmail"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/edittext"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/btn"
        android:id="@+id/btnResetPassword"
        android:text="@string/reset_password"
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>