<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.resetPassword.ResetPasswordActivity">


    <include
        android:id="@+id/toolbarHome"
        layout="@layout/toolbar_subhome" />
    <LinearLayout
        android:layout_below="@id/toolbarHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText
        android:layout_marginTop="32dp"
        android:inputType="textEmailAddress"
        android:id="@+id/etOtp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/edittext"
        android:hint="@string/opt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etpasswordPanel"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textinputlayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:hintEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">
        <EditText
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/pojocurser"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            style="@style/edittext"
            android:hint="@string/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etrepasswordPanel"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textinputlayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:hintEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorIconDrawable="@null">
        <EditText
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/pojocurser"
            android:id="@+id/etRePassword"
            android:inputType="textPassword"
            style="@style/edittext"
            android:hint="@string/confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/btn"
        android:id="@+id/btnResetPassword"
        android:text="@string/SUBMIT"
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/btn"
        android:id="@+id/btnResendPassword"
        android:text="@string/resend_code"
        android:backgroundTint="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>